# CrossAI

./: .gitignore  LICENSE  README.md  README2.md  gitignore
cpp/: CMakeLists.txt
cpp/include/: Application.h  Genre.h  Item.h  Recommender.h  RuleBasedRecommender.h
cpp/src/: Application.cpp  Genre.cpp  Item.cpp  RuleBasedRecommender.cpp  main.cpp
java/: pom.xml
java/src/crossai/: MainApp.java  TestHybrid.java
java/src/crossai/controller/: AppController.java
java/src/crossai/model/: Genre.java  Item.java  User.java
java/src/crossai/service/: BaseRecommendationService.java  HybridRecommendationService.java  MockRecommendationService.java  RecommendationService.java
java/src/crossai/util/: Cache.java
java/src/test/java/crossai/: FullSystemTest.java
java/test/crossai/model/: UserTest.java
python/: requirements.txt  test_ml.py
python/notebooks/: EDA.ipynb
python/recommender/: model.py  preprocess.py
shared/: input.json  ml_input.json  ml_output.json  output.json
